src/CSS/queries.css
@media only screen and (min-width: 2700px) {
    .fade-in-header {
        font-size: clamp(3rem, 15vmin, 5rem);
    }

    .header-image {
        width: 600px;
        height: 1200px;
        margin-left: 220px;
    }

    .header-image img {
        margin-left: -170px;
        width: 800px;
        height: 100%;
        object-fit: cover;
        border-radius: 15px;
    }

    .card {
        height: 1200px !important;
        margin-top: 20px;
    }
}

@media only screen and (min-width: 2100px) {
    .card {
        height: 1000px !important;
        margin-top: -50px;
    }
}

@media only screen and (max-width: 2100px) {
    .card-container {
        grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
    }

    .card {

        height: 600px !important;
        margin-top: 20px;
    }
}

/* Tablets */
@media only screen and (max-width: 1700px) {
    .header-content {
        margin-left: 0px;
        margin-top: -110px;
    }

    .header-content h1 {
        font-size: clamp(4rem, 5vmin, 5rem);
    }

    .scroll {
        bottom: 70px;
    }
}

@media only screen and (min-width: 1024px) and (max-width: 1390px) {
    .header-content h1 {
        font-size: clamp(4rem, 5vmin, 5rem);
    }

    .card-container {
        grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
        /* Force 2 columns on smaller screens */
        gap: 20px;
        position: relative;
        top: -70px;
    }
}

@media only screen and (max-width: 1390px) {
    .content h1 {
        position: relative;
        top: -50px;
    }
}

@media only screen and (max-width: 1180px) {
    .header-content h1 {
        font-size: clamp(3rem, 5vmin, 5rem);
    }

    .header-content {
        margin-left: 0px;
        margin-top: -50px;
    }
}

@media only screen and (max-width: 880px) {
    .header-content {
        margin-left: 40px !important;
    }

    .header-content h1 {
        font-size: clamp(1rem, 5vmin, 2rem) !important;
    }

    .next {
        font-size: 18px;
        width: 350px;
    }
}

@media only screen and (max-width: 1024px) {
    .header-content h1 {
        font-size: clamp(3rem, 5vmin, 5rem);
    }

    .header-content {
        margin-left: 0px;
    }

    .content h1 {
        position: relative;
        top: -40px;
    }

    /* .card-container {
        grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
        gap: 20px;
        position: relative;
        top: -100px;
    } */
}

/* Mobile Phones */

@media only screen and (max-width: 450px) {

    .landing-main {
        font-size: 20px;
        width: 100%;
        border-radius: 0;
        margin: 0;
        padding: 0;
        position: relative;
    }

    .fade-in-header {
        font-size: clamp(1rem, 10vmin, 1rem);
        top: -30px;
        padding: 10px;
    }

    .header-content {
        flex-direction: column;
        align-items: center;
        width: 100vw;
        height: 100%;
        margin-left: -10px;
        /* gap: 20px; */
    }

    .header-text,
    .header-image {
        margin: 0;
        padding: 0;
        max-height: 100%;
    }

    .header-image {
        width: 100%;
        height: auto;
        position: relative;
        margin: 10px;
        left: -7px;
    }

    .header-image img {
        margin: 0 auto;
        width: 100%;
        height: auto;
        border-radius: 10px;
    }

    .header-text {
        width: 100%;
        text-align: center;
        padding: 5px;
        margin: 0 auto;
        margin-top: -30px;
    }

    .header-text h1 {
        font-size: 30px;
    }

    .header-text p {
        font-size: 14px;
    }

    .socials {
        margin-left: 15px;
    }

    .socials ul {
        justify-content: center;
    }

    .scroll {
        font-size: 12px;
        position: absolute;
        bottom: 10px;
        left: 50%;
        transform: translateX(-50%);
        text-align: center;
        width: 100%;
        display: none;
    }

    .landing-page-content {
        width: 100vw;
        height: auto !important;
        margin: 0;
        padding: 20px;
        box-sizing: border-box;
        box-shadow: none;
    }

    /* Cards (Project) */

    .content-container,
    .content,
    .card-container {
        margin-left: -4px !important;
        padding: 10px !important;
        width: 100vw !important;
    }

    .content h1 {
        margin-left: 10px;
    }

    .card-container {
        margin-top: 20px !important;
    }

    .content-container {
        margin-bottom: -40px !important;
    }

    .card {
        height: 500px !important;
    }

    .card-image {
        height: 60% !important;
    }

    .card-inner-content {
        height: 40% !important;
    }

    .languages {
        font-size: 8px !important;
    }

    /* Skills Page */
    .skills-content h1 {
        font-size: 37px !important;
    }

    .bar {
        font-size: 22px !important;
    }
}

@media only screen and (max-width: 375px) {
    .header-text h1 {
        font-size: 24px
    }

    .header-text p {
        font-size: 12px;
    }
}

